--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-		<link rel="shortcut icon" href="" type="image/x-icon">
+		<link rel="shortcut icon" href="assets/img/todo-512.webp" type="image/x-icon">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/25cb47cef6.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 		<!-- CSS -->
@@ -12,6 +14,52 @@
     <title>To-Do List</title>
 	</head>
 	<body>
+    <header class="header text-center">
+      <div class="container">
+        <h1 class="fw-bold">To-Do List</h1>
+        <img class="icono-todo" src="assets/img/todo-512.webp" alt="imagen lista tareas">
+        <div class="input-group my-4">
+          <input type="text" class="form-control " placeholder="Nueva Tarea" aria-label="Nueva Tarea" aria-describedby="boton-agregar-tarea" id="nueva-tarea" required>
+          <button class="btn btn-primary" type="button" id="boton-agregar-tarea">Agregar</button>
+        </div>
+      </div>
+      
+    </header>
+    <main class="main">
+      <hr>
+      <div class="container">
+        <div class="card mb-4">
+          <div class="card-body">
+            <div class="estado-tarea">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox">
+              </div>
+              <h2>Tarea 1</h2>
+            </div>
+            <div class="iconos">
+              <i class="fa-solid fa-pencil icono editar"></i>
+              <i class="fa-solid fa-trash icono borrar"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-4">
+          <div class="card-body">
+            <div class="estado-tarea">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox">
+              </div>
+              <h2>Tarea 2</h2>
+            </div>
+            <div class="iconos">
+              <i class="fa-solid fa-pencil icono editar"></i>
+              <i class="fa-solid fa-trash icono borrar"></i>
+            </div>
+          </div>
+        </div>
+    </main>
+    <!-- <footer class="footer">
+      <hr>
+    </footer> -->
 		
 		<!-- JQuery -->
 		<!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
